--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <link rel = 'stylesheet' href = 'style/style.css'>
     <body>
+        <div id="nav"></div>
+        <p>Second commit</p>
     </body>
 </html>
