--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Git</title>
     </head>
     <link rel = 'stylesheet' href = 'style/style.css'>
+    <link rel = 'stylesheet' href = 'style/style2.css'>
     <body>
         <div id="nav"></div>
     </body>
