--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <link rel = 'stylesheet' href = 'style/style2.css'>
     <body>
         <div id="nav"></div>
+        <p>New Branch 2</p>
     </body>
 </html>
